Fix projects spacing

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,11 +3,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
-}
-
-.projects h3{
-    margin-top: 9rem;
+    justify-content: center;
+    gap: 50px
 }
 
 .projects-box {
